--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ main {
 .weather-info .image-icon {
   width: 100px;
   height: 100%;
-  background-color: #f1f1f1;
+  background-color: #fff;
   border-radius: 50%;
   -webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.6);
   -moz-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.6);
